[gd_scene load_steps=4 format=3 uid="uid://bfov35j3gicna"]

[ext_resource type="Script" path="res://options/Options.gd" id="1_om2gr"]
[ext_resource type="PackedScene" uid="uid://bvk0g5cpdcjc3" path="res://options/particleOption/ParticleOption.tscn" id="2_a1355"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2ydxf"]
bg_color = Color(0, 0, 0, 0.862745)

[node name="Options" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_om2gr")

[node name="BasicOptions" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_2ydxf")

[node name="VBoxContainer" type="VBoxContainer" parent="BasicOptions"]
custom_minimum_size = Vector2(760, 0)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.302083
anchor_top = 0.367593
anchor_right = 0.697917
anchor_bottom = 0.632407
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="FullScreen" type="Button" parent="BasicOptions/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 33
text = "- 全屏模式 -"

[node name="EditMode" type="Button" parent="BasicOptions/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 33
text = "- 编辑模式(已关闭) -"

[node name="BackgroundSetting" type="Button" parent="BasicOptions/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 33
text = "- 背景轮换(已关闭) -"

[node name="ParticleSetting" type="Button" parent="BasicOptions/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 33
text = "- 粒子设置 -"

[node name="Exit" type="Button" parent="BasicOptions/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 33
text = "- 退出TouchWorld -"

[node name="ParticleOption" parent="." instance=ExtResource("2_a1355")]
visible = false
layout_mode = 1
anchor_top = 0.940741
anchor_bottom = 1.0
offset_top = 64.0
grow_horizontal = 2
grow_vertical = 0
